+ Fixed some Findbugs warnings in the sequence domain. + Changed intro screen for PtolemyDB configuration. + Fixed bug in ontologies/ExpressionConceptFunctionParseTreeEvaluator class